# brainmap

./: .brainmapignore.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  design.md  frontend.md
.github/workflows/: ci.yml  release.yml  security.yml
assets/models/default/: README.md  model-manifest.template.json
crates/brainmap-cli/: Cargo.toml  brainmap.json  build.rs
crates/brainmap-cli/assets/: web.html
crates/brainmap-cli/src/: bench.rs  build_info.rs  cli.rs  context.rs  decision_engine.rs  decision_engine_impl.rs  dogfood.rs  eval.rs  export.rs  gate.rs  harness.rs  index.rs  install.rs  learning.rs  lib.rs  main.rs  markdown.rs  mcp.rs  model.rs  onboarding.rs  privacy.rs  qualification.rs  skill.rs  snapshot.rs  util.rs  vault.rs  web.rs
crates/brainmap-cli/tests/: build_info.rs  dogfood.rs  qualification.rs  smoke.rs
crates/brainmap-cli/tests/support/: mod.rs  qualification.rs
crates/brainmap-model-potion-base-8m-part-1/: Cargo.toml
crates/brainmap-model-potion-base-8m-part-2/: Cargo.toml
crates/brainmap-model-potion-base-8m-part-3/: Cargo.toml
crates/brainmap-model-potion-base-8m-part-3/src/: lib.rs
crates/brainmap-model-potion-base-8m-part-4/: Cargo.toml
docs/: acceptance-report.md  architecture.md  decision-ontology.md  dependency-decisions.md  harness-contract.md  hot-path-vs-slow-path.md  implementation-notes.md  implementation-plan.md  import-export.md  model-packaging.md  privacy-threat-model.md  production-readiness.md  research-notes.md  web-ui.md
evidence/m001/c49d41a/: README.md  SHA256SUMS  manifest.json  qualification-summary.json  reproducibility-summary.json  source.tar
evidence/m001/d93ea7a/: README.md  bench-1000.json  bench-5000.json  qualification-manifest.json  restore-fault-existing-backed-up-state.json  restore-fault-existing-backed-up.json  restore-fault-files-written-state.json  restore-fault-files-written.json  restore-fault-gate-checked-state.json  restore-fault-gate-checked.json  restore-fault-index-rebuilt-state.json  restore-fault-index-rebuilt.json  restore-fault-links-checked-state.json  restore-fault-links-checked.json  restore-fault-staging-activated-state.json  restore-fault-staging-activated.json  restore-fault-staging-created-state.json  reviews.md  (+9 more)
fixtures/agentmemory/: sample.json
fixtures/decision-bench/: ambiguous.jsonl  architecture.jsonl  generalization.jsonl  hard-no.jsonl  harness.jsonl  learning-controls.jsonl  model-use.jsonl  negative-matrix.jsonl  privacy.jsonl  shadow.jsonl  tooling.jsonl  workflow.jsonl
fixtures/demo/: README.md
integrations/claude-code/: README.md
integrations/codex/: AGENTS.md.fragment  README.md
integrations/generic-harness/: README.md
integrations/opencode/: README.md
npm/brainmap/: README.md  package.json
scripts/: generate-sbom.sh  m8-assemble-qualification.sh  m8-codex-fia5.sh  m8-integrated-qualification.sh  m8-release-qualification.sh  prepare-model-crates.sh  prepare-npm-package.sh  release-qualification.sh  test-m8-assemble-qualification.sh  test-m8-codex-fia5.sh  test-m8-integrated-qualification.sh  test-m8-release-qualification.sh  test-release-reproducibility.sh  test-vendored-i18n.sh  verify-release-reproducibility.sh
(+135 files in other folders)
