[package]
name = "brainmap-cli"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
default-run = "brainmap"

[[bin]]
name = "brainmap"
path = "src/main.rs"

[[bin]]
name = "brainmapd"
path = "src/bin/brainmapd.rs"

[dependencies]
age = "0.11.3"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
model2vec-rs = { version = "0.2.1", default-features = false, features = ["local-only", "fancy-regex"] }
regex = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
zstd = "0.13"
