[package]
name = "brainmap-model-potion-base-8m-part-3"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Embedded potion-base-8M model data chunk 3 for brainmap-cli"
homepage = "https://github.com/aksOps/brainmap"
repository = "https://github.com/aksOps/brainmap"
keywords = ["brainmap", "model2vec", "embedding"]
include = ["Cargo.toml", "src/lib.rs", "data/part.bin"]

[lib]
path = "src/lib.rs"
